# discord-bot

./: .envrc  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  LICENSE  Makefile  README.md  bot.py  config.yaml  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: docker-publish.yml
actions/giphy/: giphy.py
actions/roles/: roles.py
actions/status/: status.py
actions/weather/: weather.py
bot/: bot.py
bot/actions/roles/: roles.py
bot/actions/weather/: weather.py
bot/cogs/: bot_admin.py  calendar.py  drawing_contest.py  errors.py  giphy.py  roles.py  status.py  weather.py
bot/ext/: custom_permissions.py
bot/services/: config.py  contest.py  giphy.py  google_calendar.py  weather.py
data/: config.yml
discord_bot/: __main__.py  bot.py  cmd.py  config.py
extensions/: .gitignore  .pylintrc  LICENSE  Makefile  README.md  install.sh  pyproject.toml  requirements.txt  test.sh
extensions/_dependencies/: __init__.py
extensions/admin_config/: __init__.py  config.py
extensions/admin_errors/: __init__.py  errors.py
extensions/admin_extension/: __init__.py  bot_admin.py
extensions/cal/: __init__.py  calendar.py  google_calendar.py  test.py  test_calendar.py  test_google_calendar.py
extensions/calendar/: calendar.py
extensions/channel_notifier/: __init__.py  channel_notifier.py  test_channel_notifier.py
extensions/custom_permissions/: __init__.py
extensions/dice/: __init__.py  dice.py  test_dice.py
extensions/drawing_contest/: drawing_contest.py
extensions/extension_admin/: __init__.py  bot_admin.py
extensions/giphy/: __init__.py  cmd.py  services.py
extensions/link_helper/: __init__.py  cog.py
extensions/other/: bot_admin.py  calendar.py  errors.py  giphy.py  status.py  weather.py
extensions/pin_messages/: __init__.py  pin_messages.py
extensions/repost/: README.md  __init__.py  cmd.py  repost.py
extensions/role/: __init__.py  cmd.py
extensions/roles/: __init__.py  roles.py
extensions/services/: google_calendar.py  weather.py
extensions/status/: __init__.py  status.py
extensions/sync/: __init__.py  cmd.py
extensions/topic_notifier/: __init__.py  topic_notifier.py
extensions/weather/: __init__.py  api_geocode_test.txt  api_test_response.txt  cmd.py  models.py  service.py  test_service.py  weather.py
root/etc/cont-init.d/: 30-config
root/etc/services.d/discord-bot/: run
shared/dataclasses_yaml/: __init__.py  api.py  setup.py
shared/datafile/: datafile.py  setup.py
shared/datafile/datafile/: __init__.py  datafile.py
shared/file_secrets/: __init__.py  file_secrets.py  setup.py
shared/file_secrets/file_secrets/: file_secrets.py
