[tool.black]
line-length = 98
target-version = ['py37']

[tool.isort]
profile = "black"

[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["nalabelle <git@nalabelle.com>"]
readme = "README.md"
packages = [{include = "discord_bot"},{include = "extensions"}]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.0.1"
file-secrets = {git = "https://github.com/nalabelle/py-file_secrets.git"}
datafile = {git = "https://github.com/nalabelle/py-datafile.git"}
click = "^8.1.3"
pydantic = "^1.10.2"
piny = "^0.6.0"
requests = "^2.28.1"
python-dateutil = "^2.8.2"
py-rolldice = "^0.4.0"
geocoder = "^1.38.1"
python-forecastio = "^1.4.0"
beautifulsoup4 = "^4.11.1"
pydantic-yaml = "^0.8.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.8.0"
pylint = "^2.6.0"

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
  "too-few-public-methods",
  ]

[tool.pytest.ini_options]
cache_dir = "/tmp/pytest_cache"
log_cli = true
log_level = "debug"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
