# pyproject.toml

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.black]
line-length = 98
target-version = ['py37']

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["nalabelle <nalabelle@gmail.com>"]
description = "Extensions for https://github.com/nalabelle/discord-bot"
license = "MIT"
name = "discord-bot-extensions"
version = "0.1.0"

[tool.poetry.dependencies]
PyYAML = "^5.4.1"
asynctest = "^0.13.0"
dataclasses-json = "^0.5.2"
datafile = { git = "https://github.com/nalabelle/py-datafile.git", branch = "main" }
"discord.py" = "^1.3.3"
file-secrets = {git = "https://github.com/nalabelle/py-file_secrets.git", branch = "main"}
geocoder = "^1.38.1"
giphypop = "^0.3"
google-api-python-client = "^1.9.3"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.4.1"
py-rolldice = {git = "https://github.com/Fiona1729/py-rolldice.git"}
pyRFC3339 = "^1.1"
pytest-asyncio = "^0.14.0"
python = "^3.7"
python-dateutil = "^2.8.0"
python-forecastio = "^1.3.5"
pytz = "^2020.1"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
libfaketime = "^2.0.0"
pylint = "^2.6.0"
pytest-libfaketime = "^0.1.2"

[tool.pylint]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
  "C0330",
  "C0326",
  "missing-function-docstring",
  "no-self-use",
  ]

[tool.pytest]

[tool.pytest.ini_options]
cache_dir = "/tmp/pytest_cache"
log_cli = true
log_level = "debug"
